[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
categories = ["api-bindings"]
description = "Raw bindings to librasqal"
homepage = "https://maidsafe.net"
keywords = ["rasqal", "rdf", "query"]
license = "MIT OR Apache-2.0"
name = "rasqal-rs"
repository = "https://github.com/maidsafe/rasqal-rs"
version = "0.1.0"

[dependencies]
libc = "~0.2.44"
